* Merged @sleepyjames' PR that fixes an error when pofile save path contains '.po' in the path
* Merged @rory's PR to correcty handle plural strings that have a leading/trailing newline (Issue #34)

Version 0.6.6
-------------
* Django 1.4 support (Issue #30, #33)
* Better handling of translation callbacks on Bing's translation API and support of composite locales (Issue #26) 

Version 0.6.5
-------------
* Updated polib to 0.7.0
* Added ROSETTA_POFILE_WRAP_WIDTH setting to track the line-length of the updated Po file. (Issue #24)
* Renamed the ``messages``context variable to ``rosetta_messages`` prevent conflicts with ``django.contrib.messages`` (Issue #23)

Version 0.6.4
-------------
* Added ROSETTA_REQUIRES_AUTH option to grant access to non authenticated users (False by default) 

Version 0.6.3
-------------
* Support for the Bing transation API service to replace Google's service which is no longer free.