@@ -3,3 +3,4 @@ include LICENSE
 recursive-include rosetta/locale *
 recursive-include rosetta/tests *
 recursive-include rosetta/templates *
+prune testproject
