@@ -1,0 +1,5 @@
+#!/bin/bash
+
+cd testproject
+python manage.py test rosetta
+cd ..
