@@ -1,3 +1,4 @@
+* Added a testproject to run tests
 * Merged @sleepyjames' PR that fixes an error when pofile save path contains '.po' in the path
 * Merged @rory's PR to correcty handle plural strings that have a leading/trailing newline (Issue #34)
 
